updates var names for clarity
